# django-blog

./: requirements.txt  setup.cfg
.github/workflows/: django.yml
myblog/: .flake8
myblog/blog/: models.py  tests.py  urls.py  views.py
myblog/blog/management/commands/: lint.py
myblog/blog/migrations/: 0001_initial.py
myblog/blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_post.html  home.html  user_posts.html
myblog/blog/tests/: test_selenium.py  test_simple.py
myblog/myblog/: settings.py  tests.py  urls.py
myblog/users/: models.py  views.py
myblog/users/migrations/: 0001_initial.py
myblog/users/templates/users/: login.html  profile.html  register.html
