[flake8]
exclude = .git,*migrations*, env/*
max-line-length = 88
ignore = E203, E501

[metadata]
name = django-blog-IwonaZ
version = 0.0.2
author = Iwona Zdzieblo
author_email = iwona.zdzieblo@gmail.com
description = A simple django blog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IwonaZ/django-blog
project_urls =
    Bug Tracker = https://github.com/IwonaZ/django-blog/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Framework :: Django :: 3.2
    Operating System :: OS Independent

[options]
package_dir =
    = myblog
packages = find:
python_requires = >=3.6
install_requires = 
    Django==3.2.9
    django-crispy-forms==1.13.0
    Pillow==8.4.0
include_package_data = True

[options.packages.find]
where = myblog